2007-04-19 Borut Razem <borut.razem AT siol.net>

	* src/port.h: use const poiters to strings
	* src/SDCCargs.h: declared getStringArg() and getIntArg()
	* src/pic16/main.c: include SDCCargs.h
	* src/SDCCglobl.h: code_seg and const_seg are not pointers to
	  const char, since the strings are dynamically allocated
	* src/SDCCmain.c: options.code_seg and options.const_seg are
	  dynamically allocated; check port specific command line options
	  before the general ones
	* src/z80/main.c: fixed bug #1631895: codeseg/constseg #pragma fail

2007-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/ds400rom.h,
	* device/lib/ds390/lcd390.c,
	* device/lib/ds390/memcpyx.c,
	* device/lib/ds390/rtc390.c,
	* device/lib/ds400/ds400rom.c,
	* device/lib/ds400/memcpyx.c,
	* device/lib/hc08/_ret.c: more replacements of keywords with their
	  double underscore equivalents
	* device/lib/ds390/Makefile.in,
	* device/lib/ds400/Makefile.in,
	* device/lib/gbz80/Makefile.in,
	* device/lib/hc08/Makefile.in,
	* device/lib/mcs51/Makefile.in,
	* device/lib/z80/Makefile.in: added --std-c89 to CFLAGS

2007-04-17 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx, src/SDCCmain.c, src/SDCCglobal.h, src/ds390/gen.c,
	  src/hc08/gen.c, src/mcs51/gen.c, src/mcs51/rtrack.c:
	  fixed #1493816: option --no-gen-comments: --no-gen-comments renamed
	  to --fverbose-asm, to be gcc'ish

2007-04-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (aopOp): set size to 1 for ruonly, fixes bug 1699455

2007-04-17 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixed #1701874: Mac OSX references in SDCC manual
	* device/lib/ds400/tinibios.c, device/lib/hc08/_divuint.c,
	  device/lib/hc08/_divulong.c: replaced _asm and _endasm keywords
	  with their double underscore equivalent

2007-04-14 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: some additional "freeware" replaced with "free open
	  source"

2007-04-13 Borut Razem <borut.razem AT siol.net>
